[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/player/player_main.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/console.gd" type="Script" id=2]
[ext_resource path="res://assets/gui/player/health.png" type="Texture" id=3]
[ext_resource path="res://scripts/player/movement.gd" type="Script" id=4]
[ext_resource path="res://scripts/player/fly.gd" type="Script" id=5]
[ext_resource path="res://assets/sound/player/jump/jump.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/player/walking/walking.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/atmosphere/outside.wav" type="AudioStream" id=8]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0, 0, 0, 1 )
sky_horizon_color = Color( 0, 0, 0, 1 )
sky_curve = 0.626795
sky_energy = 1.75
sun_color = Color( 0.878431, 0.854902, 0.227451, 1 )
sun_latitude = -133.51
sun_longitude = 29.65
sun_angle_min = 5.24
sun_angle_max = 12.3
sun_curve = 0.3249
sun_energy = 3.26

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_sky_contribution = 0.58
fog_depth_enabled = false
fog_depth_begin = 0.0
fog_depth_end = 879.1
fog_depth_curve = 2.92817
ss_reflections_max_steps = 63
ss_reflections_fade_in = 6.11789
ss_reflections_fade_out = 0.707107
ss_reflections_depth_tolerance = 52.2
ssao_enabled = true
ssao_radius2 = 2.8
ssao_intensity2 = 0.0
ssao_light_affect = 0.57
ssao_quality = 1
ssao_edge_sharpness = 32.0
dof_blur_far_transition = 1473.32
dof_blur_far_amount = 0.09
dof_blur_far_quality = 2
dof_blur_near_enabled = true
dof_blur_near_distance = 0.2
dof_blur_near_transition = 0.17
dof_blur_near_amount = 0.34
dof_blur_near_quality = 2
adjustment_brightness = 0.03

[sub_resource type="Animation" id=3]
resource_name = "sun"
length = 30.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:environment:background_sky:sun_latitude")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 30 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, -180.0 ]
}

[sub_resource type="CapsuleMesh" id=20]

[sub_resource type="SpatialMaterial" id=21]

[sub_resource type="BoxShape" id=4]

[node name="KinematicBody" type="KinematicBody"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.0126817, 3.69038, -0.000906352 )
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
editor/display_folded = true
environment = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="WorldEnvironment"]
autoplay = "sun"
anims/sun = SubResource( 3 )

[node name="GUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="console" type="Control" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="GUI/console"]
margin_top = 0.431213
margin_right = 297.0
margin_bottom = 140.431
color = Color( 0, 0, 0, 0.788235 )

[node name="text_fps" type="RichTextLabel" parent="GUI/console"]
margin_left = 8.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 22.0
text = "FPS: null"

[node name="text_movement" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 22.0
margin_right = 159.0
margin_bottom = -1.0
text = "Movement: null"

[node name="text_fov" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 38.0
margin_right = 164.0
margin_bottom = 13.0
text = "FOV: null"

[node name="text_contact" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 54.0
margin_right = 264.0
margin_bottom = 29.0
text = "Has contact(RayCast): null"

[node name="text_onfloor" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 71.4216
margin_right = 164.0
margin_bottom = 46.4216
text = "Is on floor: null"

[node name="text_position" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 88.0
margin_right = 164.0
margin_bottom = 64.0
text = "Position: null"

[node name="text_speed" type="RichTextLabel" parent="GUI/console"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 104.0
margin_right = 164.0
margin_bottom = 80.0
text = "Speed: null"

[node name="health" type="Control" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="GUI/health"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -26.0069
margin_top = 549.256
margin_right = 10.9931
margin_bottom = 546.256

[node name="Sprite" type="Sprite" parent="GUI/health/MarginContainer"]
position = Vector2( 17.5284, 21.2645 )
scale = Vector2( 0.418124, 0.418124 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="GUI/health/MarginContainer"]
position = Vector2( 61.0508, 21.2645 )
scale = Vector2( 0.418124, 0.418124 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="GUI/health/MarginContainer"]
position = Vector2( 103.622, 21.2645 )
scale = Vector2( 0.418124, 0.418124 )
texture = ExtResource( 3 )

[node name="pause" type="Control" parent="GUI"]
editor/display_folded = true
visible = false
margin_left = 496.744
margin_top = 136.361
margin_right = 1202.74
margin_bottom = 597.361

[node name="ColorRect" type="ColorRect" parent="GUI/pause"]
margin_left = -377.0
margin_top = 33.892
margin_right = 409.0
margin_bottom = 292.892
color = Color( 0, 0, 0, 0.831373 )

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/pause"]
margin_left = -44.0879
margin_top = 162.475
margin_right = 398.912
margin_bottom = 281.475
text = "PAUSED"

[node name="PlayerCamera" type="Camera" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0.126819, 3.02836, 0.00499491 )
fov = 64.0
near = 0.01
far = 900.0

[node name="FovTween" type="Tween" parent="PlayerCamera"]

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.87907, 0 )
enabled = true
cast_to = Vector3( 0, -0.6, 0 )
collide_with_areas = true

[node name="PlayerMovement" type="Spatial" parent="."]

[node name="Movement" type="Spatial" parent="PlayerMovement"]
script = ExtResource( 4 )

[node name="Fly" type="Spatial" parent="PlayerMovement"]
script = ExtResource( 5 )

[node name="PlayerMesh" type="MeshInstance" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0, -2.59, 0, 0.75, 0, 0.0878795, 0.755081, 0 )
mesh = SubResource( 20 )
material/0 = SubResource( 21 )

[node name="HitBox" type="CollisionShape" parent="."]
transform = Transform( 0.75, 0, 0, 0, 0, -2.59, 0, 0.75, 0, 0.0878795, 0.755081, 0 )
shape = SubResource( 4 )

[node name="Audio" type="Spatial" parent="."]
editor/display_folded = true

[node name="jump" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
stream = ExtResource( 6 )
bus = "Player"

[node name="walking" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
visible = false
stream = ExtResource( 7 )
unit_db = -16.335
pitch_scale = 0.67
max_distance = 10.0
bus = "Player"

[node name="atmosphere" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0.264788, -1.19209e-006, -0.0169277 )
stream = ExtResource( 8 )
unit_db = -9.1
max_db = -14.15
autoplay = true
